@@ -1,3 +1,9 @@
+2013-02-25  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
+	* dfp/math.h (fpclassifyd32): Add prototype.
+	(fpclassifyd64): Likewise.
+	(fpclassifyd128): Likewise.
+
 2013-02-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
 	* sysdeps/powerpc/dfpu/issignalingd128.c (issignalingd128): Fix DCM
